# freeze_tag_problem

./: .gitignore  CMakeLists.txt
include/: FTPDecoder.hpp  ftp_utils.hpp  mycolor.hpp  mygraphlib.hpp  myutils.hpp  problem_utils.hpp
instances/: README
instances/gnp/: gnp-graph-n30-p0.01.dig  gnp-graph.dig
instances/medium/bin_tree/: tree-deg2-n15-1.g  tree-deg2-n15-10.g  tree-deg2-n15-11.g  tree-deg2-n15-13.g  tree-deg2-n15-14.g  tree-deg2-n15-15.g  tree-deg2-n15-16.g  tree-deg2-n15-17.g  tree-deg2-n15-18.g  tree-deg2-n15-19.g  tree-deg2-n15-2.g  tree-deg2-n15-21.g  tree-deg2-n15-22.g  tree-deg2-n15-23.g  tree-deg2-n15-24.g  tree-deg2-n15-26.g  tree-deg2-n15-27.g  tree-deg2-n15-28.g  tree-deg2-n15-29.g  tree-deg2-n15-3.g  tree-deg2-n15-30.g  tree-deg2-n15-31.g  tree-deg2-n15-32.g  tree-deg2-n15-33.g  tree-deg2-n15-34.g  tree-deg2-n15-35.g  tree-deg2-n15-36.g  tree-deg2-n15-37.g  tree-deg2-n15-39.g  tree-deg2-n15-4.g  tree-deg2-n15-40.g  tree-deg2-n15-42.g  tree-deg2-n15-43.g  tree-deg2-n15-44.g  tree-deg2-n15-46.g  tree-deg2-n15-48.g  tree-deg2-n15-49.g  tree-deg2-n15-5.g  tree-deg2-n15-50.g  tree-deg2-n15-51.g  (+51 more)
instances/small/: l1-005.g  tree-005.g
instances/small/bin_tree/: tree-deg2-n7-1.g  tree-deg2-n7-10.g  tree-deg2-n7-11.g  tree-deg2-n7-12.g  tree-deg2-n7-14.g  tree-deg2-n7-15.g  tree-deg2-n7-2.g  tree-deg2-n7-3.g  tree-deg2-n7-4.g  tree-deg2-n7-5.g  tree-deg2-n7-6.g  tree-deg2-n7-7.g  tree-deg2-n7-8.g  tree-deg2-n7-9.g  tree-deg3-n15-1.dig  tree-deg3-n15-2.dig  tree-deg3-n15-3.dig  tree-deg3-n31-1.dig  tree-deg3-n31-2.dig  tree-deg3-n31-3.dig  tree-deg3-n63-1.dig  tree-deg3-n63-2.dig  tree-deg3-n63-3.dig  tree-deg3-n7-1.dig  tree-deg3-n7-10.dig  tree-deg3-n7-11.dig  tree-deg3-n7-12.dig  tree-deg3-n7-13.dig  tree-deg3-n7-14.dig  tree-deg3-n7-2.dig  tree-deg3-n7-3.dig  tree-deg3-n7-4.dig  tree-deg3-n7-5.dig  tree-deg3-n7-6.dig  tree-deg3-n7-7.dig  tree-deg3-n7-8.dig  tree-deg3-n7-9.dig
instances/small/ter_tree/: tree-deg3-n13-1.g  tree-deg3-n13-10.g  tree-deg3-n13-11.g  tree-deg3-n13-12.g  tree-deg3-n13-13.g  tree-deg3-n13-15.g  tree-deg3-n13-16.g  tree-deg3-n13-17.g  tree-deg3-n13-18.g  tree-deg3-n13-19.g  tree-deg3-n13-2.g  tree-deg3-n13-20.g  tree-deg3-n13-21.g  tree-deg3-n13-22.g  tree-deg3-n13-23.g  tree-deg3-n13-24.g  tree-deg3-n13-25.g  tree-deg3-n13-26.g  tree-deg3-n13-27.g  tree-deg3-n13-28.g  tree-deg3-n13-29.g  tree-deg3-n13-3.g  tree-deg3-n13-30.g  tree-deg3-n13-32.g  tree-deg3-n13-33.g  tree-deg3-n13-34.g  tree-deg3-n13-36.g  tree-deg3-n13-37.g  tree-deg3-n13-38.g  tree-deg3-n13-39.g  tree-deg3-n13-4.g  tree-deg3-n13-40.g  tree-deg3-n13-41.g  tree-deg3-n13-42.g  tree-deg3-n13-43.g  tree-deg3-n13-44.g  tree-deg3-n13-45.g  tree-deg3-n13-46.g  tree-deg3-n13-47.g  tree-deg3-n13-48.g  (+42 more)
instances/small/trees/: tree-deg5-n21-1.dig  tree-deg5-n21-2.dig  tree-deg5-n21-3.dig  tree-deg6-n31-1.dig  tree-deg6-n31-2.dig  tree-deg6-n31-3.dig
instances/small/unit_graph/: unit-graph-n9-m12.dig
instances/tsp_lib/: .gitattributes  a280.tsp  bayg29.tsp  bays29.tsp  berlin52.tsp  brazil58.tsp  brd14051.tsp  brg180.tsp  burma14.tsp  d493.tsp  dantzig42.tsp  eil76.tsp  fl1400.tsp  fl3795.tsp  fl417.tsp  fnl4461.tsp  fri26.tsp  gil262.tsp  gr120.tsp  gr17.tsp  gr202.tsp  gr21.tsp  gr24.tsp  gr48.tsp  gr96.tsp  hk48.tsp  kroA200.tsp  kroB100.tsp  kroB150.tsp  kroB200.tsp  lin105.tsp  p654.tsp  pa561.tsp  pla33810.tsp  pla85900.tsp  pr107.tsp  pr136.tsp  pr144.tsp  pr152.tsp  pr439.tsp  (+20 more)
instances/tsp_lib/big/: d15112.tsp  pcb3038.tsp  rl1323.tsp  rl5934.tsp  u1817.tsp  vm1748.tsp
instances/tsp_lib/large/: d1655.tsp  d18512.tsp  d2103.tsp  fl1577.tsp  nrw1379.tsp  pla7397.tsp  pr1002.tsp  si1032.tsp  u2319.tsp
instances/tsp_lib/medium/: ali535.tsp  bier127.tsp  ch130.tsp  ch150.tsp  d657.tsp  eil101.tsp  gr120.tsp  gr137.tsp  gr229.tsp  gr431.tsp  gr666.tsp  kroA150.tsp  linhp318.tsp  pa561.tsp  pr124.tsp  (+10 more)
instances/tsp_lib_hcp/: .gitattributes  alb100.hcp  alb1000.hcp  alb2000.hcp  alb3000a.hcp  alb3000b.hcp  alb3000c.hcp  alb3000d.hcp  alb3000e.hcp  alb4000.hcp  alb5000.hcp
scripts/: gnp_gen.py  graph_gen.py  heuristic_tester.py  tree_gen.py
src/: FTPDecoder.cpp  ftp_branch_and_bound.cpp  ftp_brkga.cpp  ftp_heuristic.cpp  ftp_ilp.cpp  ftp_ilp_edges.cpp  ftp_ilp_qntd.cpp  ftp_utils.cpp  mycolor.cpp  mygraphlib.cpp  myutils.cpp  problem_utils.cpp  solver_ilp.cpp  solver_ilp_flow.cpp  solver_ilp_ftp_qntd.cpp  solver_ilp_lagran.cpp  solver_ilp_leaf.cpp  solver_ilp_spt.cpp  solver_ptas.cpp  solver_tree.cpp
src/cp/: plotting.py  reading.py  solver_cp.py  solver_cp_ptas.py  solver_greedy.py  solvers.py  utils.py
(+23 files in other folders)
